# lesson_django

./: .gitignore  pyproject.toml
amazing_hunting/: settings.py  urls.py
authentication/: models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_role_alter_user_groups_alter_user_is_active_and_more.py
companies/: models.py  views.py
companies/migrations/: 0001_initial.py  0002_alter_company_options.py
tests/: conftest.py  factories.py  fixtures.py  simple_test.py
tests/vacancies/: vacancy_create_test.py  vacancy_list_test.py  vacancy_retrieve_test.py
vacancies/: models.py  permissions.py  serializers.py  urls.py  validations.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py  0004_alter_skill_options_alter_vacancy_options.py  0005_skill_is_activ.py  0006_vacancy_likes.py
